--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "11.1.0",
     "next-sanity": "^0.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-spinners": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
